--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jspdf": "^3.0.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.7.1",
     "react-webcam": "^7.2.0"
