--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.7.1",
+    "react-select": "^5.10.2",
     "react-webcam": "^7.2.0"
   },
   "devDependencies": {
