--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
+    "react-loading-skeleton": "^3.5.0",
     "react-router-dom": "^7.7.1",
     "react-select": "^5.10.2",
     "react-webcam": "^7.2.0"
