--- a/.gitignore
+++ b/.gitignore
@@ -12,11 +12,13 @@
 *.zip
 
 # local env files
+.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 .env.production
+
 
 # sensitive files
 *.key
